--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "expo": "^33.0.0",
+    "expo-font": "~5.0.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-web": "^0.11.4",
-    "expo-font": "~5.0.1",
     "react-native-gesture-handler": "~1.2.1",
     "react-native-reanimated": "1.0.1",
+    "react-native-screens": "^2.0.0-alpha.4",
+    "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
