--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-native-reanimated": "1.0.1",
     "react-native-screens": "^2.0.0-alpha.4",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "@expo/vector-icons": "latest"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "^5.1.1",
+    "react-navigation-header-buttons": "^3.0.3"
   },
   "private": true
 }
