--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "latest",
     "expo": "^33.0.0",
     "expo-font": "~5.0.1",
     "react": "16.8.3",
@@ -18,7 +19,7 @@
     "react-native-screens": "^2.0.0-alpha.4",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
-    "@expo/vector-icons": "latest"
+    "react-navigation-header-buttons": "^3.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1",
