--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native-screens": "^2.0.0-alpha.4",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
-    "react-navigation-header-buttons": "^3.0.1"
+    "react-navigation-header-buttons": "^3.0.1",
+    "react-navigation-material-bottom-tabs": "^1.0.0",
+    "react-native-paper": "^2.16.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1",
