slider and category picker

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "latest",
-    "@react-native-community/slider": "^2.0.2",
     "expo": "^33.0.0",
     "expo-font": "~5.0.1",
     "react": "16.8.3",
@@ -19,10 +18,14 @@
     "react-native-paper": "^2.16.0",
     "react-native-reanimated": "1.0.1",
     "react-native-screens": "^2.0.0-alpha.4",
+    "react-native-scrollable-tab-view": "^0.10.0",
+    "react-native-slider": "^0.11.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
     "react-navigation-header-buttons": "^3.0.1",
-    "react-navigation-material-bottom-tabs": "^1.0.0"
+    "react-navigation-material-bottom-tabs": "^1.0.0",
+    "react-scroll-horizontal": "^1.6.2",
+    "create-react-class": "latest"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1",
