--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "react-navigation": "^3.11.1",
     "react-navigation-header-buttons": "^3.0.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
-    "react-redux": "^7.1.1",
+    "react-redux": "^7.1.3",
     "react-scroll-horizontal": "^1.6.2",
     "redux": "^4.0.4"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1",
-    "react-navigation-header-buttons": "^3.0.3"
+    "react-navigation-header-buttons": "^3.0.3",
+    "redux-devtools-extension": "^2.13.8"
   },
   "private": true
 }
