--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-navigation-material-bottom-tabs": "^1.0.0",
     "react-redux": "^7.1.3",
     "react-scroll-horizontal": "^1.6.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1",
