--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "^33.0.0",
     "expo-font": "~5.0.1",
     "moment": "^2.24.0",
+    "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
